--- a/Selector02.html
+++ b/Selector02.html
@@ -6,7 +6,7 @@
     <style>
         /* class 속성으로 select를 가지는 태그의 color속성을  red로 지정한다 */
         .select {
-            color: red;
+            color: rgb(25, 25, 133);
         } 
     </style>
 </head>
